# LKSynthesizeAPP01

./: build.gradle  settings.gradle  ssh操作.txt  模型修改.doc  磁粉探伤机器人MODBUS通信协议.doc  程序升级数据库说明.txt
app/: agconnect-services.json  build.gradle  proguard-rules.pro
app/libs/: update-lib.aar
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 230518.param  bz220416_sim.param  scrfd_211223-opt2.param  settingframes.json  settingresolving.json  sim-opt-fp16.param  test1.doc  xy211223.param
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
app/src/main/res/anim/: loading.xml
app/src/main/res/drawable/: bg_loading_dialog.xml  btn_border_select.xml  btn_border_yuanjiao.xml  btn_nor_down.xml  btn_yuanjiao.xml  button_select.xml  button_selectssid.xml  circle.xml  cloors.xml  custom_checkbox_selector.xml  linelayout_backthemecolor_radion.xml  linelayout_black_radion.xml  linelayout_color_bigradion.xml  linelayout_color_pxqoutradion.xml  linelayout_color_pxqradion.xml  linelayout_color_radion.xml  linelayout_radion.xml  linelayout_white_bigradion.xml  linelayout_yello_pxqradion.xml  progress_radion.xml  progressloading.xml  pxqbutton_select.xml  radionbutton_select.xml  scanning.xml  thumb_close.xml  thumb_open.xml  track_close.xml  track_open.xml
app/src/main/res/layout/: activity_audio.xml  activity_broadcast.xml  activity_broadcast_mediacodec.xml  activity_defined.xml  activity_descern.xml  activity_head_myview.xml  activity_header.xml  loading.xml  (+32 more)
gradle/wrapper/: gradle-wrapper.properties
release/: output-metadata.json
(+178 files in other folders)
